  * Drop useless debian/dirs.
  * Fix maintainer scripts to not call programs with absolute path.
  * Add ${misc:Depends} to Depends field.
  * Ignore binary-without-manpage lintian warning.
  * Fix shebang of lcs-remove-sudoers.
  * Keep a single init script and install it with dh_installinit.
  * Synchronize lcs-sftp init script with wheezy's ssh init script.

 -- Raphaël Hertzog <hertzog@debian.org>  Mon, 05 Oct 2015 15:17:53 +0200

lcs-preinstall (2.4.10) Lcs; urgency=low

  [ Jean-Luc Chretien ]
  * Stable release for Debian Wheezy :
  * Modify in sql TYPE by ENGINE
  * Modify mysql request for create lcsmgr
  * Remove swekey, sessions and personnes mysql tables

 -- Jean-Luc Chrétien <jean-luc.chretien@tice.ac-caen.fr>  Fri, 05 Jun 2015 11:49:01 +0300

lcs-preinstall (2.4.9.1) Lcs; urgency=low

  * add init.d script for lcs-sftp in squeeze first boot
  * reverse change in lcs-preinstall-config
  * Add quotes in .my.cnf
  * Update version in postinst

 -- Jean-Luc Chrétien <jean-luc.chretien@tice.ac-caen.fr>  Thu, 21 Jun 2012 10:03:00 +0200

lcs-preinstall (2.4.8) Lcs; urgency=low

  [ Raphaël Hertzog ]
  * Add new parameters for Active Directory synchronization.
  [ Jean-Luc Chretien ]
  * Modify VERSIONLCS to 2.4.8 in postinst
  * Modify sed in lcs-preinstall-config for AD_BASE_DN param
  * Change charset in documentation index.html 
  * Fix Create lcsmgr account in lcs-preinstall-config for Squeeze
  * Make a 2.4.8 stable release

 -- Jean-Luc Chrétien <jean-luc.chretien@tice.ac-caen.fr>  Fri, 27 May 2011 12:00:56 +0200

lcs-preinstall (2.4.7) Lcs; urgency=low

  * Update table statusages whith login field
  * Add table swekey for swekey strong authentification 
  * Add params pwdPolicy in lcs_db.params

 -- Jean-Luc Chrétien <jean-luc.chretien@tice.ac-caen.fr>  Thu, 01 Jul 2010 13:55:42 +0200

lcs-preinstall (2.4.6) Lcs; urgency=low

  [ Jean-Luc Chretien ]
  * Modify sql dump for redirectmail table log
  * Update version number in postinst