@@ -10,6 +10,7 @@ lcs-preinstall (2.4.10.1) UNRELEASED; urgency=medium
   * Fix shebang of lcs-remove-sudoers.
   * Keep a single init script and install it with dh_installinit.
   * Synchronize lcs-sftp init script with wheezy's ssh init script.
+  * Provide /etc/ssh/sshd_config_sftp as a configuration file.
 
  -- Raphaël Hertzog <hertzog@debian.org>  Mon, 05 Oct 2015 15:17:53 +0200
 
